istio/istio-ingressgateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway
  name: istio-ingressgateway
  namespace: istio-system
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.101.214.137
  clusterIPs:
    - 10.101.214.137
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: status-port
      nodePort: 30262
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      nodePort: 31191
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 30896
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: tcp
      nodePort: 32063
      port: 31400
      protocol: TCP
      targetPort: 31400
    - name: tls
      nodePort: 31992
      port: 15443
      protocol: TCP
      targetPort: 15443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
