istio/ingress-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-ingress-gw
  namespace: simple
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-dev
        protocol: HTTP
      hosts:
        - 'simple.dev'
    - port:
        number: 80
        name: http-prod
        protocol: HTTP
      hosts:
        - 'simple.prod'
