istio/ingress-vs.yaml
#Добавляет правила маршрутизации запроса на сервис а тот в контейнер пода
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-ingress-vs
  namespace: simple
spec:
  hosts:
#    Заголовки Host из запроса которые принимает данный VS(хосты самого ингресса)
    - "simple.dev"
    - "simple.prod"
  gateways:
#    Имя GW к которому прикручен данный VS
    - simple-ingress-gw
  http:
    - match:
        - uri:
            prefix: /simple-spring/ip
      route:
        - destination:
#            Имя ClusterIP сервиса который перенаправит запрос напрямую в Pod с контейнером приклада
            host: simple-svc.simple.svc.cluster.local
            port:
#              Порт сервиса внутри кластера
              number: 80
